module12/istio-spec.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: service0
spec:
  gateways:
    - service0
  hosts:
    - 'httpserver.istio.test'
  http:
    - match:
        - port: 443
      route:
        - destination:
            host: service0
            port:
              number: 80
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: service0
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - 'httpserver.istio.test'
      port:
        name: http-service0
        number: 443
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: istio-test
